# wolf3d

./: CMakeLists.txt  Makefile  a.out  constants.h  few_maps.sh  ft_draw.c  ft_map.c  ft_new_win.c  ft_run_glfw.c  ft_run_pd.c  ft_run_vk.c  ft_sdl_run.c  ft_ui.c  inst.sh  keys.h  main.c  main.cpp  main_c.c  main_t.c  main_w.c  map.wolf3d  quickcg.cpp  run.sh  todo.txt  wolf3d  wolf3d.h
include/: constants.h  wolf3d.h
include/SDL2/: quickcg.h
include/libft/: Makefile  ft_atoi.c  ft_toupper.c
includes/: constants.h  keys.h  wolf3d.h
includes/libft/: Makefile
includes/libft/incdir/: libft.h
includes/libft/srcdir/: ft_atoi.c  ft_bzero.c  ft_get_next_line.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  (+39 more)
lib/: libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib
libft/: ft_get_next_line.c  ft_putstr.c  libft.h
maps/: 11  12  13  14  15  16  17  18  2  3  4  5  map.wolf3d
sdl2lib/pkgconfig/: sdl2.pc
sources/: config.c  draw.c  ft_config.c  ft_draw.c  ft_engine.c  ft_load_tex.c  ft_map.c  ft_new_win.c  ft_save_line.c  ft_screen.c  ft_sdl_run.c  ft_ui.c  screen.c
srcdir/: ft_draw.c  ft_engine copy.c  ft_engine.c  ft_map.c  ft_map_save.c  ft_ray.c  ft_save_line.c  ft_sdl_run.c  ft_ui.c  main.c
textures/: wolfwall.wad
textures/skieseye/: skieseye.txt
wolf3d-master/: Makefile  Makefile.libft  README.md  constants.h  fractol  inst.sh  run.sh  wolf3d
wolf3d-master/libft/: ft_get_next_line.c
wolf3d-master/maps/: map_err_max_h.wolf3d  map_err_min_w.wolf3d
(+7 files in other folders)
